--- a/BackendAPI/example_appsettings.json
+++ b/BackendAPI/example_appsettings.json
@@ -10,17 +10,17 @@
     "Lite": "Data Source=Twitter.db"
   },
   "JwtConfig": {
-    "Secret": "O85Vr5cuhFj3bJWQex1Z"
+    "Secret": "secret_here"
   },
 
   "MailSettings": {
     "Displayname": "Twitter",
-    "From": "Twitter@sandbox6ebbe9bdcbce42d2adf59c4517b82c6b.mailgun.org",
+    "From": "mailsetting_here,
     "Host": "smtp.mailgun.org",
     "Port": 587,
-    "UserName": "postmaster@sandbox6ebbe9bdcbce42d2adf59c4517b82c6b.mailgun.org",
-    "Password": "257eabb395901b3cd404cbe8c0033daa-181449aa-86d46e9b",
-    "UseSSL": false
+    "UserName": "username",
+    "Password": "password here",
+    "UseSSL": false or true
   }
 
 }
